@startuml

title __AMULET's Class Diagram__\n

  namespace com.kedacom.vconf.sdk.amulet {
    class com.kedacom.vconf.sdk.amulet.BuildConfig {
    }
  }
  

  namespace com.kedacom.vconf.sdk.amulet {
    class com.kedacom.vconf.sdk.amulet.BuildConfig {
    }
  }
  

  namespace com.kedacom.vconf.sdk.amulet {
    abstract class com.kedacom.vconf.sdk.amulet.Caster {
    }
  }
  

  namespace com.kedacom.vconf.sdk.amulet {
    class com.kedacom.vconf.sdk.amulet.CommandFairy {
    }
  }
  

  namespace com.kedacom.vconf.sdk.amulet {
    class com.kedacom.vconf.sdk.amulet.CrystalBall {
    }
  }
  

  namespace com.kedacom.vconf.sdk.amulet {
    class com.kedacom.vconf.sdk.amulet.FakeCrystalBall {
    }
  }
  

  namespace com.kedacom.vconf.sdk.amulet {
    interface com.kedacom.vconf.sdk.amulet.ICrystalBall {
    }
  }
  

  namespace com.kedacom.vconf.sdk.amulet {
    interface com.kedacom.vconf.sdk.amulet.IFairy {
    }
  }
  

  namespace com.kedacom.vconf.sdk.amulet {
    interface com.kedacom.vconf.sdk.amulet.IResultListener {
    }
  }
  

  namespace com.kedacom.vconf.sdk.amulet {
    class com.kedacom.vconf.sdk.amulet.MagicBook {
    }
  }
  

  namespace com.kedacom.vconf.sdk.amulet {
    class com.kedacom.vconf.sdk.amulet.NotificationFairy {
    }
  }
  

  namespace com.kedacom.vconf.sdk.amulet {
    class com.kedacom.vconf.sdk.amulet.SessionFairy {
    }
  }
  

  namespace com.kedacom.vconf.sdk.amulet {
    class com.kedacom.vconf.sdk.amulet.SimulatedDataRepository {
    }
  }
  

  com.kedacom.vconf.sdk.amulet.Caster .up.|> com.kedacom.vconf.sdk.amulet.IFairy.INotificationFairy.IListener
  com.kedacom.vconf.sdk.amulet.Caster .up.|> com.kedacom.vconf.sdk.amulet.IFairy.ISessionFairy.IListener
  com.kedacom.vconf.sdk.amulet.Caster o-- com.kedacom.vconf.sdk.amulet.IFairy.ICommandFairy : commandFairy
  com.kedacom.vconf.sdk.amulet.Caster o-- com.kedacom.vconf.sdk.amulet.ICrystalBall : crystalBall
  com.kedacom.vconf.sdk.amulet.Caster o-- com.kedacom.vconf.sdk.amulet.IFairy.INotificationFairy : notificationFairy
  com.kedacom.vconf.sdk.amulet.Caster o-- com.kedacom.vconf.sdk.amulet.IFairy.ISessionFairy : sessionFairy
  com.kedacom.vconf.sdk.amulet.CommandFairy .up.|> com.kedacom.vconf.sdk.amulet.IFairy.ICommandFairy
  com.kedacom.vconf.sdk.amulet.CommandFairy o-- com.kedacom.vconf.sdk.amulet.ICrystalBall : crystalBall
  com.kedacom.vconf.sdk.amulet.CrystalBall .up.|> com.kedacom.vconf.sdk.amulet.ICrystalBall
  com.kedacom.vconf.sdk.amulet.FakeCrystalBall -up-|> com.kedacom.vconf.sdk.amulet.CrystalBall
  com.kedacom.vconf.sdk.amulet.FakeCrystalBall o-- com.kedacom.vconf.sdk.amulet.MagicBook : magicBook
  com.kedacom.vconf.sdk.amulet.NotificationFairy .up.|> com.kedacom.vconf.sdk.amulet.IFairy.INotificationFairy
  com.kedacom.vconf.sdk.amulet.NotificationFairy o-- com.kedacom.vconf.sdk.amulet.ICrystalBall : crystalBall
  com.kedacom.vconf.sdk.amulet.SessionFairy .up.|> com.kedacom.vconf.sdk.amulet.IFairy.ISessionFairy
  com.kedacom.vconf.sdk.amulet.SessionFairy o-- com.kedacom.vconf.sdk.amulet.ICrystalBall : crystalBall


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
